fix color palette spacing

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  max-width: 375px;
 }
 
 .App-input-group {
